# smass_task

./: CMakeLists.txt  Makefile  client.cpp  cv_video_info.h  frame_info.cpp  server.cpp  socket_client.cpp  socket_client.h  socket_server.cpp  socket_server.h  test.cpp  test_socket.cpp
